<resources>
    <string name="app_name">襄助</string>
    <string name="app_watchword">襄助何必曾相识</string>
    <string name="app_back">返回</string>
    <string name="app_loading">请稍候，正在拉取数据....</string>
    <string name="app_loading_none">未找到数据.</string>
    <string name="app_loading_fail">数据加载失败，请稍后再试.</string>
    <string name="app_loading_fail_web">网页加载失败，请稍后再试.</string>
    <string name="app_refresh">刷新</string>
    <string name="app_share">分享</string>
    <string name="app_exit_title">退出</string>
    <string name="app_exit_message">确定退出应用?</string>
    <string name="click_to_refresh"><Data><![CDATA[网络连接失败，点击<font color="#2AC2EF">重试</font>]]></Data></string>
    <string name="catg_refreshing">正在加载&#8230;</string>
    <string name="action_login_text">登录</string>
<string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refreshing">正在刷新</string>
    <string name="app_list_header_refresh_up">松开刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
    <string name="app_list_footer_more">更多</string>
    <string name="app_list_footer_loading">正在加载</string>
        <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="app_upgrade_confirm">确定</string>
    <string name="app_upgrade_cancel">取消</string>
    <string name="check_new_version">发现新版本,确定更新吗?</string>
    <string name="check_new_version_title">检查新版本</string>
    <string name="check_new_version_message">正在获取新版本信息 ....</string>
    <string name="check_new_version_no_network">未找到网络连接，请设置后重试!</string>
    <string name="check_new_version_null">未找到新版本信息，请稍后再试!</string>
    <string name="check_new_version_exception">获取新版本信息出错，请稍后再试!</string>
    <string name="check_new_version_latest">已经是最新版本!</string>
    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>
    <string name="pic">照片</string>
    <string name="servicename">请输入您的服务名称</string>
    <string name="bangbanginfo">请输入您的帮帮信息-字数5-500以内</string>
    <string name="send">发送</string>
    <string name="text_btn_init">百度账号绑定</string>
    <string name="text_btn_init1">更换百度账号</string>
    <string name="text_btn_on_push">打开Push</string>
    <string name="text_btn_off_push">关闭Push</string>
    <string name="log_tip">日志：</string>
    <string name="clear_log">清除日志</string>
    <string name="text_btn_rich">富媒体消息</string>
    <string name="text_btn_initAK">无账号绑定</string>
    <string name="text_btn_setTags">设置标签</string>
    <string name="text_btn_delTags">删除标签</string>
    <string name="text_btn_senior">高级功能</string>
    <string name="text_btn_set">设置</string>
    <string name="text_media_title">富媒体消息列表</string>
    <string name="media">Rich Media</string>
    <string name="custom_text_hint">用户自定义行为打开的Activity</string>
    <string name="tags_hint">请输入多个标签，以英文逗号隔开</string>
    <string name="text_btn_aidl">轻应用AIDL</string>
    <string name="text_btn_off_lightapp">关闭所有轻消息</string>
    <string name="text_btn_off_app_msg">加入黑名单</string>
    <string name="text_btn_unread_only_msg">只获取未读消息</string>
    <string name="text_btn_on_shortcut">生成快捷图标</string>
    <string name="text_btn_showTags">列举标签</string>
    <string name="text_btn_unbind">解绑</string>
    <string name="text_btn_setunDisturb">免打扰时段</string>
    <string name="text_toast">设置成功，免打扰时段为：\n%1$s - %2$s</string>
    <string name="text_about">百度Push Android SDK 4.5.1\n\n更新时间:2015年6月18日\nChange Log：\n去除Frontia等相关内容，集成更加简便。\n增强端上加密和解密能力，升级so文件。\n增加重启保护机制，防止频繁调用接口造成的电量流失。\n增加SDK集成错误的提示和回调。\n解决数个引发崩溃的不常见bug。</string>
    <string name="text_help">百度hi官方技术讨论群：1405944\nQQ群：324533810（可加）\n云推送微信公众账号：云推送（微信号：baidu-push）\n</string>
    <string name="net_error_tip">网络错误了呢！</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left_drawer_no_login_tip">登录后，将推荐给你更多感兴趣的文章</string>
    <string name="left_drawer_item_search">搜索</string>
    <string name="left_drawer_item_favorite">收藏</string>
    <string name="left_drawer_item_subscribe">关注小区</string>
    <string name="left_drawer_item_message">收藏消息</string>
    <string name="left_drawer_item_message_my">我的消息</string>
    <string name="left_drawer_item_message_bm">参与报名</string>
    <string name="left_drawer_item_offline">离线</string>
    <string name="left_drawer_item_offline_cancel">取消离线</string>
    <string name="left_drawer_item_activity">活动</string>
    <string name="left_drawer_item_setting">系统设置</string>
    <string name="left_drawer_item_userinfo">基本信息</string>
    <string name="left_drawer_item_feedback">兴趣订阅</string>
    <string name="left_drawer_item_appstore">精彩应用</string>
    <string name="drawer_right_logout_hint_text">"登录后 可关注好友评论和收藏"</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="ss_have_a_rest">暂无更新, 休息一会儿</string>
    <string name="action_open_mode">接收消息</string>
    <string name="action_close_mode">关闭通知</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">2G/3G网络流量</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_use_swipe">左右翻页</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_use_help">使用帮助</string>
     <string name="setting_suggest">功能建议</string>
    <string name="setting_faq">常见问题</string>
     <string name="setting_about">关于我们</string>
    <string name="app_copyright">© 襄助 bbxiaoqu.com</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="day_today">今天</string>
    <string name="day_yesterday">昨天</string>
    <string name="day_before">前天</string>
    <string name="search_count_fmt">发现%1$s篇文章</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="pattern_update">发现%1$d条更新</string>
    <string name="city_category_list_header">点击选择其他城市</string>
    <string name="city_category_list_hint">选择城市，立即查看本地新闻</string>
    <string name="city_category_list_notify_no_city">请先选择您关注的城市</string>
    <string name="retry_large_image">加载失败，点击重试</string>
    <string name="menu_settings">Settings</string>
    <string name="insert_card">插入卡</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
     <string name="down_sucess">下载成功</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="d">图片描述</string>
    <string name="check_network">正在检测网络</string>
    <string name="network_status">检测到您正在使用%1$s网络</string>
    <string name="network_wifi">WIFI</string>
    <string name="network_valid">3G</string>
    <string name="network_cmwap">CMWAP</string>
    <string name="network_invalid">无网络</string>
    <string name="network_no_permission">无网络访问权限</string>
    <string name="no_valid_network">对不起，请检查网络是否可用？</string>
    <string name="network_retry">重试</string>
    <string name="network_setting">设置</string>
    <string name="init_data">正在获取最新内容</string>
    <string name="lable_not_found">对不起，没有找到这款应用。</string>
    <string name="warning_password_is_empty">密码不能为空</string>
    <string name="register">注册</string>
    <string name="register_ok">注册成功</string>
    <string name="registering">注册中，请稍候</string>
    <string name="register_label">提交</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_email">邮箱</string>
    <string name="error_username_empty">用户名不能为空</string>
    <string name="error_username_length_invalid">用户名必须大于3个字符，小于16个字符</string>
    <string name="error_email_empty">邮箱不能为空</string>
    <string name="error_email_format_invalid">邮箱格式不正确</string>
    <string name="error_email_length_invalid">邮箱必须大于6个字符，小于40个字符</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_password_length_invalid">密码必须大于1个字符，小于32个字符</string>
    <string name="error_password_not_same">密码不匹配</string>
    <string name="error_username_invalid">用户名不合法，请重新输入</string>
    <string name="error_username_exist">用户名已经被注册，请尝试其他的用户名。</string>
    <string name="error_email_invalid">您输入的邮箱格式不正确。</string>
    <string name="error_email_exist">邮箱已经被注册，请尝试其他的邮箱。</string>
    <string name="error_password_invalid">密码不合法。</string>
    <string name="error_other">注册失败，未知原因。</string>
    <string name="register_tip">还没有机锋账号？\n立即创建</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="singin">登录中，请稍候</string>
    <string name="login_tip">已经拥有机锋账号？\n立即登录</string>
    <string name="hint_input_username">机锋帐号</string>
    <string name="hint_input_password">密码</string>
    <string name="error_login_username">用户名不存在，请重新输入。</string>
    <string name="error_login_password">密码不正确，请重新输入。</string>
    <string name="error_login_other">登录失败，请稍候重试。</string>
    <string name="notification_update_info">今天更新%1$s款软件,您有%2$s款需要更新。</string>
    <string name="notification_server_error">服务器暂时无法访问，请稍候重试。</string>
    <string name="notification_client_error">客户端访问错误，请检查设置。</string>
    <string name="login_btn">登陆</string>
    <string name="register_btn">注册</string>
    <string name="foundpass_btn">找回密码</string>
    <string name="savepass_btn">保存密码</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="setting">设置</string>
    <string name="infile_default"></string>
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/bbxiaoqu/voicedemo/8k_test.pcm, 8k采样的测试音频</item>
        <item>res:///com/bbxiaoqu/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
    </string-array>
    <string name="sample_default"></string>
    <string-array name="sample_list">
        <item>@string/sample_default</item>
        <item>8000, 适用于2G或3G网络</item>
        <item>16000, 适用于4G或WIFI网络</item>
    </string-array>
    <string name="language_default"></string>
    <string-array name="language">
        <item>@string/language_default</item>
        <item>cmn-Hans-CN, 普通话(中国)</item>
        <item>sichuan-Hans-CN, 四川(中国)</item>
        <item>yue-Hans-CN, 粤语(中国)</item>
        <item>en-GB, 英语(美国)</item>
    </string-array>
    <string name="nlu_default"></string>
</resources>